--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <div class="navbar">
         <nav class="top_navbar">
             <div class="images_gmail">
-                <a href="a_link" id="padding">Gmail</a>
-                <a href="a_link" id="padding">Images</a>
-                <a href="a_link" id="padding>
+                <a href="a_link" class="padding top_hover">Gmail</a>
+                <a href="a_link" class="padding top_hover">Images</a>
+                <a href="a_link" class="padding dot_3"><img src="3x3dot.jpg" width="15px" height="15" alt="3dot"></a>
+                <a href="a_link" class="sign_in">Sign In </a>
             </div>
         </nav>
-
     </div>
 
     <center>
