imgs folder created

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="images_gmail">
                 <a href="a_link" class="padding top_hover">Gmail</a>
                 <a href="a_link" class="padding top_hover">Images</a>
-                <a href="a_link" class="padding dot_3"><img src="3x3dot.jpg" width="15px" height="15" alt="3dot"></a>
+                <a href="a_link" class="padding dot_3"><img src="imgs/3x3dot.jpg" width="15px" height="15" alt="3dot"></a>
                 <a href="a_link" class="sign_in">Sign In </a>
             </div>
         </nav>
@@ -19,7 +19,7 @@
 
     <center>
     <div class="logo">
-        <img src="google_logo.png" alt="google logo">
+        <img src="imgs/google_logo.png" alt="google logo">
     </div>
     </center>
 </body>
