added search bar and submit buttons

--- a/index.html
+++ b/index.html
@@ -22,4 +22,20 @@
         <img src="imgs/google_logo.png" alt="google logo">
     </div>
     </center>
+
+    <center>
+    <div class="search_form">
+        <form action="/search" method="GET" id="form">
+            <input class="input_search" name="source" type="text">
+        </form>
+    </div>
+    </center>
+
+    <div class="submit">
+        <center>
+        <input class="submit_button" type="submit" Value="Google Search" name="google_search">
+        <input class="submit_button" type="submit" Value="I'm Feeling Lucky" name="i'm_feeling_lucky">
+        </center>
+    </div>
+
 </body>
