--- a/index.html
+++ b/index.html
@@ -38,4 +38,23 @@
         </center>
     </div>
 
+    <footer>
+        <div class="country">
+            <span>Cyprus</span>
+        </div>
+        <div class="adds">
+            <span class="adds_links">
+                <a href="a_link" class="footer_link">Advertising</a>
+                <a href="a_link" class="footer_link">Business</a>
+                <a href="a_link" class="footer_link">About</a>
+                <a href="a_link" class="footer_link">How Search works</a>
+            </span>
+            <span class="privacy_links">
+                    <a href="a_link" class="footer_privacy">Privacy</a>
+                    <a href="a_link" class="footer_privacy" >Termns</a>
+                    <a href="a_link" class="footer_privacy">Settings</a>
+            </span>
+        </div>
+    </footer>
+
 </body>
