--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <div class="navbar">
         <nav class="top_navbar">
             <div class="images_gmail">
-                <a href="a_link" class="padding top_hover">Gmail</a>
-                <a href="a_link" class="padding top_hover">Images</a>
-                <a href="a_link" class="padding dot_3"><img src="imgs/3x3dot.jpg" width="15px" height="15" alt="3dot"></a>
-                <a href="a_link" class="sign_in">Sign In </a>
+                <a href="pages/links.html" class="padding top_hover">Gmail</a>
+                <a href="pages/links.html" class="padding top_hover">Images</a>
+                <a href="pages/links.html" class="padding dot_3"><img src="imgs/3x3dot.jpg" width="15px" height="15" alt="3dot"></a>
+                <a href="pages/links.html" class="sign_in">Sign In </a>
             </div>
         </nav>
     </div>
@@ -44,15 +44,15 @@
         </div>
         <div class="adds">
             <span class="adds_links">
-                <a href="a_link" class="footer_link">Advertising</a>
-                <a href="a_link" class="footer_link">Business</a>
-                <a href="a_link" class="footer_link">About</a>
-                <a href="a_link" class="footer_link">How Search works</a>
+                <a href="pages/links.html" class="footer_link">Advertising</a>
+                <a href="pages/links.html" class="footer_link">Business</a>
+                <a href="pages/links.html" class="footer_link">About</a>
+                <a href="pages/links.html" class="footer_link">How Search works</a>
             </span>
             <span class="privacy_links">
-                    <a href="a_link" class="footer_privacy">Privacy</a>
-                    <a href="a_link" class="footer_privacy" >Termns</a>
-                    <a href="a_link" class="footer_privacy">Settings</a>
+                    <a href="pages/links.html" class="footer_privacy">Privacy</a>
+                    <a href="pages/links.html" class="footer_privacy" >Terms</a>
+                    <a href="pages/links.html" class="footer_privacy">Settings</a>
             </span>
         </div>
     </footer>
