--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
         </center>
     </div>
 
+    <center>
+    <div class="language">
+        Google offered in:
+        <a href="pages/links.html" class="engl">English</a>
+    </div>
+    </center>
+
     <footer>
         <div class="country">
             <span>Cyprus</span>
